--- a/new.html
+++ b/new.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GT-pages</title>
+    <style>
+        #class{
+            position: fixed;
+
+        }
+    </style>
 </head>
 <body>
     <p>My favrt Player is Ronaldo </p>
@@ -12,6 +18,16 @@
     <br>
     <p> He is a sigma</p>
     <img src="batman.jpg">
+    <div>new</div>
+    <div>web</div>
+    <div>site</div>
+    <div class="batman">Nahid</div>
+    <div>cool</div>
+    <div>hot</div>
+    <div>abar jigay</div>
+    <div>hpi</div>
+    <div>mpi</div>
+    <div>duet</div>
     
 </body>
 </html>
