--- a/new.html
+++ b/new.html
@@ -7,7 +7,15 @@
     <style>
         #class{
             position: fixed;
+            color: crimson;
 
+        }
+        img{
+            width: 50%;
+            height: 50%;
+        }
+        div{
+            background-color: cyan;
         }
     </style>
 </head>
