--- a/new.html
+++ b/new.html
@@ -7,15 +7,25 @@
     <style>
         #class{
             position: fixed;
-            color: crimson;
+            background-color: black;
 
+        }
+        #web{
+            background-color: red;
+
+        }
+        #cool{
+            background-color: greenyellow;
         }
         img{
             width: 50%;
             height: 50%;
         }
+
         div{
             background-color: cyan;
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
@@ -28,9 +38,9 @@
     <img src="batman.jpg">
     <div>new</div>
     <div>web</div>
-    <div>site</div>
+    <div class="web">site</div>
     <div class="batman">Nahid</div>
-    <div>cool</div>
+    <div class="cool">cool</div>
     <div>hot</div>
     <div>abar jigay</div>
     <div>hpi</div>
