--- a/new.html
+++ b/new.html
@@ -69,6 +69,13 @@
     </style>
 </head>
 <body>
+    <video width="320" height="220" controls autoplay >
+        <source src="bad.mp4" type="video/mp4"/>
+
+    </video>
+    <br>
+    <br>
+    <br>
     <audio controls autoplay>
         <source src="tennu.mp3" tpye="audio/mp3"/>
     </audio>
