--- a/new.html
+++ b/new.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GT-pages</title>
+    <link rel="icon"type="image/x-icon" href="https://www.instagram.com/p/CZ46kFbhnbX/">
     <style>
       
     html {
