--- a/new.html
+++ b/new.html
@@ -101,6 +101,14 @@
         <div>abay</div>
         <div>jigay</div>
     </section>
+    <div>
+        <ol type="i">
+            <li> NIrvana</li>
+            <li>Metalica</li>
+            <li>AC/DC</li>
+        </ol>
+    </div>
+    <iframe src="https://www.instagram.com/i_am_naheed_7/" height="200" width="300" title="My instagram"></iframe>
     <table>
         <tr>
             <th></th>
